[package]
name = "play-with-tokio-and-rlua-coroutine"
version = "0.1.0"
authors = ["NAKAMURA Yoshitaka <arumakanoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.17"
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10"
